gcc/testsuite/g++.dg/delayedfold/fwrapv1.C
@@ -1,0 +1,6 @@
+// PR c++/69631
+// { dg-options -fwrapv }
+
+struct C {
+  static const unsigned short max = static_cast<unsigned short>((32767 * 2 + 1));
+};
